--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,22 @@
 <html>
 <head>
   <title>Money</title>
+  <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css"/>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body style="padding-top: 40px">
+  <div class="container">
+    <%= render :partial => "common/header" %>
+    <div class="inner_content">
+      <% if @title %>
+        <h2><%= @title %></h2>
+      <% end %>
+      <%= render_flash %>
 
-<%= yield %>
-
+      <%= yield %>
+    </div>
+  </div>
 </body>
 </html>
