--- a/app/views/groups/_pay_suggestions.html.erb
+++ b/app/views/groups/_pay_suggestions.html.erb
@@ -28,7 +28,7 @@
       <div id="pay_structure" class="clearfix">
         <h3 class='small_view'> Suggested transaction: </h3>
         <div class="transactions">
-          <%= transaction_statement(group_user) %>
+          <%= raw transaction_statement(group_user) %>
         </div>
       </div>
     <% end %>
