--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the groups controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "mixins.css.scss";
+
+#groups{
+  .group{
+    margin: 2em 0;
+    .group_header{
+       background: none repeat scroll 0 0 #EEEEEE;
+       border: 1px solid #BBBBBB;
+       padding: 7px 0;
+       width: 100%;
+       @include top-rounded-corners(5px);
+    }
+  }
+}
