--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -5,35 +5,32 @@
         <h3><%= link_to("My Money Transactions", root_path) %></h3>
         <% if current_user %>
           <ul class="nav">
-            <li class="active"><%= link_to "Home", root_path %></li>
-            <li><%= link_to "My Groups", groups_path() %></li>
-            <li><%= link_to "Questions", groups_path() %></li>
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle">Dropdown</a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Secondary link</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Another link</a></li>
+            <%= render_tab(TabConstants::HOME, root_path) %>
+            <li class="dropdown <%= 'active' if @tab == TabConstants::GROUPS %>">
+              <%= link_to "My Groups", groups_path(), :class => "dropdown-toggle" %>
+              <ul class="dropdown-menu groups">
+                <% current_user.groups.each do |group| %>
+                  <li><%= link_to truncate(group.name), group_path(group) %> </li>
+                <% end %>
               </ul>
             </li>
+            <%= render_tab(TabConstants::ITEMS, items_path) %>
           </ul>
 
           <ul class="nav secondary-nav">
-          <li class="dropdown">
-            <%= link_to(current_user.name, "#", :class => "dropdown-toggle") %>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
-              <li class="divider"></li>
-              <li><%= link_to "Logout", logout_path %></li>
-            </ul>
-          </li>
-        </ul>
+            <li class="dropdown">
+              <%= link_to(current_user.name, "#", :class => "dropdown-toggle") %>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Logout", logout_path %></li>
+              </ul>
+            </li>
+          </ul>
         <% else %>
           <ul class="nav secondary-nav">
-            <li> <%= link_to "Register", new_user_path %> </li>
-            <li class="active"> <%= link_to "Login", login_path %> </li>
+            <%= render_tab(TabConstants::REGISTER, new_user_path) %>
+            <%= render_tab(TabConstants::LOGIN, login_path) %>
           </ul>
         <% end %>
       </div>
