--- a/app/views/common_items/index.html.erb
+++ b/app/views/common_items/index.html.erb
@@ -1,5 +1,5 @@
 <% @title = @group.name %>
-<% @page_action = link_to("Add new item", new_group_common_item_path(:group_id => @group.id)) %>
+<% @page_action = {:name => "Add new item", :url => new_group_common_item_path(:group_id => @group.id)} %>
 
 <div id="group_show">
   <%= render :partial => "groups/group_details" %>
