--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="topbar-wrapper" style="z-index: 5;">
   <div class="topbar" data-dropdown="dropdown">
     <div class="topbar-inner">
-      <div class="container">
+      <div class="container-fluid">
         <h3><%= link_to("My Money Transactions", root_path) %></h3>
         <% if current_user %>
           <ul class="nav">
