--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body style="padding-top: 40px">
-  <div class="container">
+  <div class="container-fluid">
     <%= render :partial => "common/header" %>
     <div class="inner_content">
       <%= render :partial => "common/inner_header" %>
