--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,7 +1,7 @@
 <% @title = "Create a new group" %>
 
 <div id="new_group">
-  <% form_for @group do |f| %>
+  <%= form_for @group, :validate => true do |f| %>
     <%= f.text_field :name %>
     <%= f.text_area :description %>
 
