--- a/app/assets/stylesheets/group_users.css.scss
+++ b/app/assets/stylesheets/group_users.css.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the group_users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "mixins.css.scss";
+
+.group_status{
+  tr.inactive{
+    color: #CCC;
+    font-size: 0.9em;
+  }
+  tr.self{
+    @include highlight-background;
+  }
+}
