--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -24,15 +24,17 @@
             </tr>
             <% group.group_users.each do |group_user| %>
               <% if group_user.user == current_user %>
-                <% style = "background-color: #FFFF99" %>
+                <% class_name = "self" %>
               <% elsif !group_user.active? %>
-                <% style = "color: #CCC; font-size: 0.9em" %>
+                <% class_name = "inactive" %>
               <% end %>
-              <tr style="<%= style if style %>" >
-                <td> <%= group_user.user.name %> </td>
-                <td> Rs. <%= group_user.balance %> </td>
-                <td style="font-size: 0.8em"> <%= render_action_link(group_user, current_user) %> </td>
-              </tr>
+              <% if group_user.active? || current_user == group.admin %>
+                <tr class="<%= class_name.presence %>" >
+                  <td> <%= group_user.user.name %> </td>
+                  <td> Rs. <%= group_user.balance %> </td>
+                  <td style="font-size: 0.8em"> <%= render_action_link(group_user, current_user) %> </td>
+                </tr>
+              <% end %>
             <% end %>
           </table>
           </div>
