--- a/app/views/common_items/new.html.erb
+++ b/app/views/common_items/new.html.erb
@@ -8,9 +8,9 @@
         {:onchange => "CommonItem.typeChange('#{new_group_common_item_path(@group)}')", :id => "common_item_transaction_type"} %>
       <span id="loading_image" style="display: none"><%= image_tag("ajax-loader.gif") %></span>
       <%= f.text_field :cost, :class => "small" %>
-      <div class="label_item">
-        <label for="common_item_users">Users:</label>
-        <div id="transaction_type">
+      <div class="clearfix">
+        <label>Users</label>
+        <div class="input" id="transaction_type">
           <%= render :partial => "common_items/transaction_types_#{@common_item.transaction_type}" %>
         </div>
       </div>
