--- a/app/views/common_items/_transaction_types_0.html.erb
+++ b/app/views/common_items/_transaction_types_0.html.erb
@@ -1,4 +1,4 @@
-<ul class="inputs-list">
+<ul class="inputs-list columnize">
   <% @group.group_users.active.each_with_index do |g_user, i| %>
     <li>
       <label>
