--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,19 +3,21 @@
   <%= page_entries_info(@items,  :entry_name => 'items') %>
 </span>
 <span style="float:right;"><%= will_paginate @items %></span>
-<table id="items_list" rules="all">
-  <tr>
-    <td><b>Item Name</b></td>
-    <td><b>My Share</b></td>
-    <td><b>Item Cost</b></td>
-    <td><b>Group</b></td>
-    <td><b>Date</b></td>
-  </tr>
+<table id="items_list" class="zebra-striped">
+  <thead>
+    <tr>
+      <td><b>Item Name</b></td>
+      <td><b>My Share in rupees</b></td>
+      <td><b>Item Cost in rupees</b></td>
+      <td><b>Group</b></td>
+      <td><b>Date</b></td>
+    </tr>
+  </thead>
   <% @items.each do |item| %>
     <tr>
       <td><%= item.name %></td>
-      <td>Rs.<%= item.default_amount%></td>
-      <td>Rs.<%= item.common_item.cost %></td>
+      <td><%= item.default_amount%></td>
+      <td><%= item.common_item.cost %></td>
       <td><%= item.common_item.group.name %></td>
       <td><%= item.created_at.strftime('%B, %d %Y')%></td>
     </tr>
