Trying to fix pagination styles

--- a/app/views/common_items/index.html.erb
+++ b/app/views/common_items/index.html.erb
@@ -3,29 +3,31 @@
 
 <div id="group_show">
   <%= render :partial => "groups/group_details" %>
+  <%= render :partial => "groups/admin_actions" %>
+  <%= will_paginate @common_items %>
+
   <div style="overflow-x: scroll; margin-bottom: 20px;">
-    <span style="float:left;"><%= page_entries_info(@common_items,  :entry_name => 'items') %></span>
-    <span class="pagination_details"><%= will_paginate @common_items %></span>
-    <br/>
-    <table id="common_items_table" border="1" rules="all">
-      <tr class="header">
-        <th>Item Name</th>
-        <th>Cost (paid by)</th>
-        <% @active_group_users.each do |g_user| %>
-          <th><%= g_user.name %></th>
-        <% end %>
-        <% if @suspended_group_users.any? %>
-          <th class="suspended"> Suspended Users </th>
-        <% end %>
-        <th class='date'>Transaction Date</th>
-      </tr>
+    <table id="common_items_table" class="zebra-striped">
+      <thead>
+        <tr>
+          <th>Item Name</th>
+          <th>Cost (paid by)</th>
+          <% @active_group_users.each do |g_user| %>
+            <th><%= g_user.name %></th>
+          <% end %>
+          <% if @suspended_group_users.any? %>
+            <th class="suspended"> Suspended Users </th>
+          <% end %>
+          <th class='date'>Transaction Date</th>
+        </tr>
+      </thead>
       <% @common_items.each do |common_item| %>
         <tr class="<%= 'payment' if common_item.payment? %>">
           <td>
             <% if common_item.payment? %>
               <span style="color: #337733">Payment made-</span>
             <% end %>
-            <%= common_item.name %>&nbsp;&nbsp;<small><%= show_delete_link(common_item)%></small>
+            <%= common_item.name %>&nbsp;&nbsp;<%= show_delete_link(common_item)%>
           </td>
           <td style="color:red;">Rs.<%= common_item.cost %> (<%= common_item.user.display_name %>)</td>
           <% @active_group_users.each do |g_user| %>
@@ -48,7 +50,5 @@
         </tr>
       <% end %>
     </table>
-    <span style="float:right;"><%= will_paginate @common_items %></span>
   </div>
-  <%= render :partial => "groups/admin_actions" %>
 </div>
