--- a/app/views/groups/_admin_actions.html.erb
+++ b/app/views/groups/_admin_actions.html.erb
@@ -1,9 +1,19 @@
-<% if current_user == @group.admin %>
-<div class='clearfix admin_actions'>
-  <span>
-    <b>Invite Url:</b>
-    <%= link_to new_user_url(:group_code => @group.code), new_user_url(:group_code => @group.code) %>
-  </span>
-  <%= link_to("Delete this group", group_path(@group), :method => :delete, :confirm => "Are you sure you want to delete this group?", :class => 'button righted') %>
-</div>
+<% if current_user == @group.admin || @group.description.present? %>
+  <div class='alert-message block-message warning'>
+    <a class="close" href="#">×</a>
+    <p>
+      <% unless @group.description.blank? %>
+        <div>
+          <b>Group Info:</b> <%= @group.description %>
+        </div>
+      <% end %>
+      <b> Invite Url: </b> <%= link_to new_user_url(:group_code => @group.code), new_user_url(:group_code => @group.code) %>
+    </p>
+  <br/>
+  <% if current_user == @group.admin %>
+  <div class="alert-actions">
+    <%= link_to("Delete this group", group_path(@group), :method => :delete, :confirm => "Are you sure you want to delete this group?", :class => 'btn small') %>
+  </div>
+  <% end %>
+  </div>
 <% end %>
