Styling other transaction type

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -17,10 +17,14 @@
   }
 }
 
-ul.columnize{
+ul.columnize,{
   padding-top: 6px;
 }
 
 .label.important a{
   color: white;
+}
+
+.input-prepend{
+  margin-bottom: 5px;
 }
