--- a/app/views/common_items/new.html.erb
+++ b/app/views/common_items/new.html.erb
@@ -11,7 +11,7 @@
       <div class="clearfix">
         <label>Users</label>
         <div class="input" id="transaction_type">
-          <%= render :partial => "common_items/transaction_types_#{@common_item.transaction_type}" %>
+          <%= render :partial => "common_items/transaction_types_1" %>
         </div>
       </div>
 
