--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -10,7 +10,7 @@
         <div id="group_<%= group.id %>" class="group">
           <div class='group_header well'>
             <h3><%= link_to group.name, group_path(group) %> </h3>
-            <div class="span4"><%= link_to "Add new common item", new_group_common_item_path(group), :class => "btn success" %></div>
+            <div class="span4"><%= link_to "Track a transaction", new_group_common_item_path(group), :class => "btn success", :remote => true, :disable_with => "please wait.." %></div>
           </div>
           <div class='group_body well'>
           <%= render :partial => "groups/pay_suggestions", :locals => {:group_user => group.get_group_user(current_user), :full_view => false} %>
