--- a/app/views/common_items/_transaction_types_0.html.erb
+++ b/app/views/common_items/_transaction_types_0.html.erb
@@ -8,6 +8,5 @@
     </li>
   <% end %>
   <br/>
-  <a id="select" href="#" onclick="CommonItem.selectAll(true);">Check All</a>
-  <a id="unselect" style="display:none" href="#" onclick="CommonItem.selectAll(false);">Uncheck All</a>
+  <a id="select_all" href="#">Select All</a>
 </ul>
