--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,8 +1,5 @@
 <% @title = "My Items" %>
-<span style="float:left;">
-  <%= page_entries_info(@items,  :entry_name => 'items') %>
-</span>
-<span style="float:right;"><%= will_paginate @items %></span>
+<%= will_paginate @items, :renderer => PaginationListLinkRenderer %>
 <table id="items_list" class="zebra-striped">
   <thead>
     <tr>
@@ -29,6 +26,6 @@
     <td><%= Time.now.strftime('%B, %d %Y')%></td>
   </tr>
 </table>
-<span style="float:right;"><%= will_paginate @items %></span>
+<%= will_paginate @items, :renderer => PaginationListLinkRenderer %>
 
 <h3>Net Credit: Rs. <%= current_user.net_balance%>/-</h3>
