--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,4 @@
-<% @title = 1/0#"My Groups" %>
+<% @title = "My Groups" %>
 <% @page_action = {:name => "Create new group", :url => new_group_path} %>
 
 <div id="groups">
